[metadata]
name = auth_login
version = 2015.4.16
summary = 'Cloud computing fabric controller extension'
home-page = 'https://github.com/windskyer/auth_login'
author = 'flftuu '
author-email = 'flftuu@teamsun.com.cn'
license = 'LGPL'
description-file = 
    README.rst
platform = ''
classifier = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    auth_login

scripts = 
    bin/wlogind

data-files =
    /etc/auth_login =
        etc/auth_login.conf

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
